cluster/gitops/games/minecraft/router/tcproute.yaml
---
# Two routes are needed due to https://github.com/istio/istio/issues/56769
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: minecraft-router-internal
spec:
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: minecraft-router
          port: 25565
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: minecraft-router-external
spec:
  parentRefs:
    - name: external-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: minecraft-router
          port: 25565
